# rustpress

./: .dockerignore  .env  .env.example  .gitignore  Cargo-leptos.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  rustfmt.toml
.github/workflows/: rust.yml
.sqlx/: query-0975a25bce5eee87161634c106d065f63533978fba997ea8faee7041056190bc.json  query-0a41221ca50d4c7f3f803589113cee50b5eb00bef56eacd9a77d87786bc98082.json  query-0dfcf31efd4dd35ff534ab29d3df74bb5f870ee0091381e9b29ccbb303aa1054.json  query-1b335cb42277fa1e4c1a9705c590f6f87a51fda91f3f4447804601af4f0cc05b.json  query-2cd81d9e017c63bbd634b70c6d740e5555466a11b5cd0ba5b5142be75542c39f.json  query-320fab899e4b1807816e2463141110e798b89af43f683e5286cce952ab6c9d08.json  query-355105d481949e5e12c7ef63ef24c641d5ed1ba053c1b6e2e4d95f72753cb228.json  query-36dc93b705c2c6ba782e58e16a2ce5e676bd3e51da0db9285a6fa0721ceee545.json  query-384d8149fb04e4b1155d175b5d43a056ccfd7d4be8b5912b4af11f35b2e77518.json  query-613db4e7c4c8e53b7a1576bc00037128e5b42dec530d84cda58e95bbaa29c13b.json  query-6ec5feca364df12619a95dcd030d6b43557bf4b379da6b03ec799dc19baed672.json  query-95322ea51dd7f8607c93c863792455ec3c6e19193e5944904dcff36db770cdc4.json  query-a14166e51d7ebec45c9106192b98f137372646933d4e7a983eed089b19bad485.json  query-bd2cdfe0f23a96027970c2d87938fb570d6f006e1fca50d6a3d6c6b43621c3c1.json  query-bdf75e9e2ea6c70ea4c6e96cfec6ce117478a2c16686975912a5ddd3d605401c.json  query-c1c28cdadfaff600d09b396408e5941ce68d8cd4cde0c3958865d9b227612266.json  query-f3cd668a08505dd834be49647323451f6349add102bf9503f652b0984ef7f02b.json
migrations/: 20260109121427_create_users_table.sql  20260124120000_create_content_items.sql  20260124123000_create_site_templates.sql  20260129120000_add_ownership_to_content_and_templates.sql  20260130130000_add_owner_columns.sql  20260130131000_enable_pgcrypto.sql  20260131120000_create_sites_and_user_email_verification.sql  20260131134000_fix_builtin_template_newlines.sql  20260201100000_add_site_default_template.sql  20260202155400_add_site_homepage_settings.sql  20260202180000_create_roles.sql  20260202181000_content_item_revisions.sql  20260202181500_add_owner_kind_to_content_item_revisions.sql  20260203120000_add_content_revisions.sql  20260203121000_add_content_collaborators.sql  20260205205729_prevent_last_admin_deletion.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/common/: errors.rs  macros.rs  mod.rs
src/db/: collaborators.rs  content.rs  db.rs  mod.rs  revisions.rs  roles.rs  site_templates.rs  sites.rs
src/frontend/: landing.rs  mod.rs
src/frontend/components/: alert.rs  button.rs  feature_card.rs  footer.rs  input.rs  mod.rs  nav.rs
src/frontend/pages/: admin.rs  landing.rs  login.rs  mod.rs  not_found.rs  register.rs
src/handlers/: auth.rs
src/models/: collaborator.rs  components.rs  content.rs  content_kind.rs  content_revision.rs  content_status.rs  homepage_type.rs  mod.rs  site.rs  site_template.rs  user.rs
src/services/: auth.rs  mod.rs
src/templates/: admin.html
src/types/: mod.rs
src/web/: forms.rs  helpers.rs  middleware.rs  mod.rs  routes.rs  security.rs  state.rs  templates.rs
src/web/handlers/: account.rs  admin_collaborators.rs  admin_content.rs  admin_history.rs  admin_roles.rs  admin_templates.rs  (+7 more)
static/: app.css
style/: main.css  tailwind.css
templates/: 401.html  404.html
templates/admin/: account.html  configuration.html  dashboard.html  edit.html  layout.html  login.html  new.html  pages_list.html  posts_list.html  register.html  register_auth.html  revision_preview.html  security.html  site_edit.html  site_new.html  sites_list.html  template_edit.html  template_new.html  templates_list.html  themes.html  user_edit.html  user_new.html  users_list.html
templates/layouts/: base.html
templates/partials/: content_macros.html  editor.html  editor_readonly.html  editor_scripts.html  history_panel.html  nav_admin.html  nav_guest.html  nav_public.html  preview_modal.html  template_placeholders.html  undo_redo_scripts.html
templates/public/: content.html  fallback.html  index.html
tests/: common.rs  db_tests.rs  user_tests.rs
tests/migrations/: 0001_init.sql
