[package]
name = "rustpress"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
publish = false
authors = [
    "Vladimír Uhlík <514058@mail.muni.cz>",
    "Peter Rakšány <xraksany@mail.muni.cz>",
    "Samuel Malec <536542@mail.muni.cz>",
    "Matej Vavro <536408@mail.muni.cz>",
]

[dependencies]
# SSR templates / utilities
askama = "0.15.4"
dotenvy = "0.15.7"

# Web
actix-web = "4.4"
actix-files = "0.6"
tokio = { version = "1.49", features = ["full"] }


# Database
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono",
    "tls-rustls",
    "json",
] }

# Security
argon2 = { version = "0.5", features = ["password-hash"] }

# Error Handling
thiserror = "2.0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Types
field_names = "0.2"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
